# hifi-gan

./: .gitignore  README.md  inference_prompts.txt  pyproject.toml  requirements.txt  synthesize.py  train.py
notebooks/: HiFi_GAN_demo.ipynb
scripts/: download_dataset.sh  download_model.sh  external_inference.sh  full_tts_inference.sh  grade_sentences_inference.sh  train.sh
src/configs/: inference_audio.yaml  inference_text.yaml  train_hifigan.yaml
src/configs/datasets/: audio.yaml  custom.yaml  ljspeech.yaml  text.yaml
src/configs/discriminator/: hifigan.yaml
src/configs/metrics/: wv_mos.yaml
src/configs/transforms/: text.yaml
src/configs/transforms/instance_transforms/: mel_spec.yaml  text.yaml
src/configs/writer/: cometml.yaml  wandb.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  custom_dataset.py  ljspeech_dataset.py
src/logger/: cometml.py  utils.py
src/loss/: __init__.py  hifigan.py
src/metrics/: __init__.py  wv_mos.py
src/model/: __init__.py  hifigan.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  melspectrogram.py
